k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hrflow

  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web

spec:
  ingressClassName: traefik

  rules:
    - http:

        paths:
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: auth
                port:
                  number: 3001
          - path: /paie
            pathType: Prefix
            backend:
              service:
                name: paie
                port:
                  number: 3002
          - path: /conges
            pathType: Prefix
            backend:
              service:
                name: conges
                port:
                  number: 3003
          - path: /recrutement
            pathType: Prefix
            backend:
              service:
                name: recrutement
                port:
                  number: 3004
        
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: gateway
                port:
                  number: 3000

          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 3005
